# gpfports

./: README.rst  dependency_graph.txt  install_order.sh  mac_native.txt
algencan/: algencan-2.3.7_lion_ampl.patch  install_algencan.sh
ampl/: install_ampl.sh
aspell/: install_aspell.sh  install_en_dict.sh
atlas/: install_atlas_broken.sh
autoconf/: install_autoconf.sh
automake/: install_automake.sh
bashreduce/: install_bashreduce.sh
boost/: install_boost.sh
ccl/: README  ccl.html  install_ccl.sh
cgal/: README
cii/: install_cii.sh
cling/: install_cling.sh
cliquer/: install_cliquer.sh
cmake/: install_cmake.sh
coin_all/: install_coin_all.txt
conTeXt/: ConTeXt_Standalone#Single_user_installation.html  install_context.sh  update_context.sh
ctest/: README
curl/: install_curl.sh
cvxopt/: install_cvxopt.sh
cvxpy/: install_cvxpy.sh
cweb/: install_cweb.sh
d3/: install_d3.js.sh
doxygen/: install_doxygen.sh
dsdp/: install_dsdp.sh
eigen/: install_eigen.sh
exiftool/: install_exiftool.sh
exuberant_ctags/: README  complicated_maketags.sh  install_exuberant_ctags.sh  maketags.sh
fftw/: install_fftw.sh
fossil/: install_fossil.sh
gc/: install_gc.sh
gcc/: install_gcc_advanced.sh  install_gcc_basic.sh
gfortran/: GFortranBinariesMacOS.html  gnu-keyring.gpg  install_gfortran.sh
git/: dependencies.txt
glpk/: 00globals.sh  01fetch.sh  (+5 more)
writing_tools/miscfiles/miscfiles-1.5/: ChangeLog  Makefile.am  Makefile.in  NEWS  TODO  bcp-index.txt  configure  configure.ac  fyi-index.txt  na.phone  rfc-index.txt  std-index.txt  unicode-license
(+117 files in other folders)
